# datacenter-manager

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  seed_data.py
backend/app/core/: config.py  crypto.py  database.py  exceptions.py  pagination.py  security.py
backend/app/crud/: __init__.py  alert.py  audit_log.py  base.py  corridor.py  datacenter.py  datastore.py  device.py  device_type.py  integration.py  ip_address.py  ip_network.py  license.py  network_interface.py  network_link.py  power_reading.py  rack.py  room.py  san_fabric.py  token_revocation.py  user.py  virt_cluster.py  virt_host.py  virtual_machine.py  vlan.py
backend/app/models/: __init__.py  alert.py  audit_log.py  corridor.py  datacenter.py  datastore.py  device.py  device_type.py  enums.py  integration.py  ip_address.py  ip_network.py  license.py  mixins.py  network_interface.py  network_link.py  power_reading.py  rack.py  room.py  san_fabric.py  token_revocation.py  user.py  virt_cluster.py  virt_host.py  virtual_machine.py  vlan.py
backend/app/schemas/: __init__.py  alert.py  audit_log.py  auth.py  corridor.py  datacenter.py  datastore.py  device.py  device_type.py  integration.py  ip_address.py  ip_network.py  license.py  network_interface.py  network_link.py  power_reading.py  rack.py  room.py  san_fabric.py  token_revocation.py  user.py  virt_cluster.py  virt_host.py  (+2 more)
backend/migrations/: env.py
backend/tests/: README.md  conftest.py  factories.py
(+185 files in other folders)
