[project]
name = "datacenter-manager-backend"
version = "1.0.0"
description = "On-premise datacenter infrastructure management — backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
timeout = 60
filterwarnings = [
    "ignore::DeprecationWarning:factory",
    "ignore::DeprecationWarning:sqlalchemy",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
